backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: ims-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: ims-zeotap-backend:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8000
          startupProbe:
            httpGet: { path: /health, port: 8000 }
            timeoutSeconds: 5
            periodSeconds: 5
            failureThreshold: 30
          readinessProbe:
            httpGet: { path: /health, port: 8000 }
            timeoutSeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet: { path: /health, port: 8000 }
            timeoutSeconds: 5
            periodSeconds: 20
          resources:
            requests: { cpu: 100m, memory: 128Mi }
            limits: { cpu: 500m, memory: 384Mi }
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: ims-app
spec:
  selector:
    app: backend
  ports:
    - port: 8000
      targetPort: 8000
